--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--This line is for open correctly in mobile and tablets-->
     <meta name="viewport" content="with=device-with, initial-scale=1.0"/>
     <title>Manuel Arias Portfolio</title>
-    <!--This line is for normalice the presentation between browsers-->
+    <!--This line is for normalize the presentation between browsers-->
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.css" integrity="sha512-3icgkoIO5qm2D4bGSUkPqeQ96LS8+ukJC7Eqhl1H5B2OJMEnFqLmNDxXVmtV/eq5M65tTDkUYS/Q0P4gvZv+yA==" crossorigin="anonymous" />    
 
@@ -54,17 +54,17 @@
       <div class="services">
         <div class="service">
           <h3>Front-end Dev</h3>
-          <p>I worked with many front end technologies, the most relevant to mention and recently used are: HTML, CSS, JavaScript, JQuery, React, Angular, WebSockets, Docker, consuming REST Services and using GrapQL schemas to get the data from the back-end.</p>
+          <p>I worked with many front end technologies, the most relevant to mention and recently used are: HTML, CSS, JavaScript, JQuery, React, Angular, WebSockets, Docker, consuming REST Services and using GraphQL schemas to get the data from the back-end.</p>
         </div> <!--close service-->
 
         <div class="service">
           <h3>Back-end Dev</h3>
-          <p>With a long experience with backend sistems, the more relevant experience is working with Java using the Programing Object Orient paradigm and recently using the declarative aproach to creat pure functions with the most recently Java API, some backend technologies: Java and Kotlin with Spring Framework, Microsoft C#.</p>
+          <p>With a long experience with backend systems, the more relevant experience is working with Java using the Programing Object Orient paradigm and recently using the declarative approach to create pure functions with the most recently Java API, some backend technologies: Java and Kotlin with Spring Framework, Microsoft C#.</p>
         </div> <!--close service-->
 
         <div class="service">
           <h3>Architecture</h3>
-          <p>Working with different Architectures for the sistems and given the best solution for the bussines. I worked with the next, most used architectures: N layer, Modular Monolith, Microsservices, Serverless. Working with differents pipelines for CI/CD with testing.</p>
+          <p>Working with different Architectures for the systems and given the best solution for the business. I worked with the next, most used architectures: N layer, Modular Monolith, Micro services, Serverless. Working with different pipelines for CI/CD with testing.</p>
         </div> <!--close service-->
       </div>
 
