Redirect to react toy block app.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </a>
         
         <!--portfolio image 3-->
-        <a href="./vanillaJS/indexAppServices.html" class="portfolio__item" target="_blank">
+        <a href="https://manuel-react-toy-blocks.netlify.app/" class="portfolio__item" target="_blank">
           <img src="img/portfolio03.jpg" alt="3" class="portfolio__img">
         </a>
         
