--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -23,22 +23,22 @@
 </head>
 <body>
   <header>
-    <img src="./images/logo.svg" alt="Sunny side logo, this is a text logo." class="sunnyside__logo"/>
-    <img src="./images/icon-hamburger.svg" alt="Menu icon, called hamburger image." class="sunnyside__menu"/>
+    <nav class="sunnyside__nav">
+      <ul class="sunnyside__nav-links">
+        <img src="./images/logo.svg" alt="Sunny side logo, this is a text logo." class="sunnyside__logo"/>
+        <li class="sunnyside__nav-link">About</li>
+        <li class="sunnyside__nav-link">Services</li>
+        <li class="sunnyside__nav-link">Projects</li>
+        <li class="sunnyside__nav-button">Contact</li>
+        <img src="./images/icon-hamburger.svg" alt="Menu icon, called hamburger image." class="sunnyside__menu"/>
+      </ul>
+    </nav>
     <h1 class="sunnyside__title">We are creatives</h1>
     <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg" class="sunnyside__arrow">
       <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v80M3 75.484l15 15 15-15"/>
       </g>
     </svg>
   </header>
-  <nav>
-    <ul>
-      <li>About</li>
-      <li>Services</li>
-      <li>Projects</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
   <section>
     <div class="sunnyside__main-brand">
       <div class="sunnyside__brand-image">
@@ -71,8 +71,8 @@
         </div>
       </div>
     </div>
-    <div class="sunnyside__graphic-design">
-      <div>
+    <div class="sunnyside__design-photography">
+      <div class="sunnyside__graphic-design">
         <h2 class="sunnyside__graphic-subtitle">
           Graphic Design
         </h2>
@@ -80,9 +80,7 @@
           Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
         </div>
       </div>
-    </div>
-    <div class="sunnyside__photography">
-      <div>
+      <div class="sunnyside__photography">
         <h2 class="sunnyside__photography-subtitle">
           Photography
         </h2>
