Frontendmentor: sunnyside, desktop menu tuning

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -23,14 +23,14 @@
 </head>
 <body>
   <header>
-    <nav class="sunnyside__nav">
+    <nav>
       <ul class="sunnyside__nav-links">
-        <img src="./images/logo.svg" alt="Sunny side logo, this is a text logo." class="sunnyside__logo"/>
-        <li class="sunnyside__nav-link">About</li>
-        <li class="sunnyside__nav-link">Services</li>
-        <li class="sunnyside__nav-link">Projects</li>
-        <li class="sunnyside__nav-button">Contact</li>
-        <img src="./images/icon-hamburger.svg" alt="Menu icon, called hamburger image." class="sunnyside__menu"/>
+        <img class="sunnyside__nav sunnyside__logo" src="./images/logo.svg" alt="Sunny side logo, this is a text logo."/>
+        <li class="sunnyside__nav sunnyside__nav-button"><a class="sunnyside__contact-button">Contact</a></li>
+        <li class="sunnyside__nav sunnyside__nav-link">Projects</li>
+        <li class="sunnyside__nav sunnyside__nav-link">Services</li>
+        <li class="sunnyside__nav sunnyside__nav-link">About</li>
+        <img class="sunnyside__menu" src="./images/icon-hamburger.svg" alt="Menu icon, called hamburger image."/>
       </ul>
     </nav>
     <h1 class="sunnyside__title">We are creatives</h1>
