--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -20,17 +20,21 @@
 
 
   <link href="./css/styles.css" rel="stylesheet">
+  <script src="./js/index.js"></script>
 </head>
 <body>
   <header>
     <nav>
-      <ul class="sunnyside__nav-links">
-        <img class="sunnyside__nav sunnyside__logo" src="./images/logo.svg" alt="Sunny side logo, this is a text logo."/>
-        <li class="sunnyside__nav sunnyside__nav-button"><a class="sunnyside__contact-button">Contact</a></li>
-        <li class="sunnyside__nav sunnyside__nav-link">Projects</li>
+      <img class="sunnyside__nav sunnyside__logo" src="./images/logo.svg" alt="Sunny side logo, this is a text logo."/>
+      <img class="sunnyside__menu" src="./images/icon-hamburger.svg" 
+        alt="Menu icon, called hamburger image."
+        onclick="showHiddeMenu()"
+        />
+      <ul class="sunnyside__nav-links" id="mobile-menu">
+        <li class="sunnyside__nav sunnyside__nav-link sunnyside__link-about">About</li>
         <li class="sunnyside__nav sunnyside__nav-link">Services</li>
-        <li class="sunnyside__nav sunnyside__nav-link">About</li>
-        <img class="sunnyside__menu" src="./images/icon-hamburger.svg" alt="Menu icon, called hamburger image."/>
+        <li class="sunnyside__nav sunnyside__nav-link">Projects</li>
+        <li class="sunnyside__nav sunnyside__nav-button"><a class="sunnyside__contact-button">Contact</a></li>
       </ul>
     </nav>
     <h1 class="sunnyside__title">We are creatives</h1>
