Frontendmentor: sunnyside, mobile menu triangle

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -30,6 +30,9 @@
         alt="Menu icon, called hamburger image."
         onclick="showHiddeMenu()"
         />
+      <svg id="mobile-triangle" class="sunnyside__nav-triangle">
+        <polygon points="250,17 250,249 160,110"/>Sorry, your browser does not support inline SVG.
+      </svg>
       <ul class="sunnyside__nav-links" id="mobile-menu">
         <li class="sunnyside__nav sunnyside__nav-link sunnyside__link-about">About</li>
         <li class="sunnyside__nav sunnyside__nav-link">Services</li>
