--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -42,122 +42,124 @@
     </nav>
     <h1 class="sunnyside__title">We are creatives</h1>
     <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg" class="sunnyside__arrow">
-      <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v80M3 75.484l15 15 15-15"/>
+      <g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/>
       </g>
     </svg>
   </header>
-  <section>
-    <div class="sunnyside__main-brand">
-      <div class="sunnyside__brand-image">
-      </div>
-      <div class="sunnyside__brand-content">
-        <h2 class="sunnyside__subtitle">
-        Transform your brand
-        </h2>
-        <div class="sunnyside__brand-text">
-          We are a full-service creative agency specializing in helping brands grow fast. 
-          Engage your clients through compelling visuals that do most of the marketing for you.
+  <main>
+    <section>
+      <div class="sunnyside__main-brand">
+        <div class="sunnyside__brand-image">
         </div>
-        <div class="sunnyside__learn sunnyside__brand-learn">
-          Learn more
-        </div>
-      </div>
-    </div>
-    <div class="sunnyside__main-audience">
-      <div class="sunnyside__audience-image">
-      </div>
-      <div class="sunnyside__audience-content">
-        <h2 class="sunnyside__audience-subtitle">
-          Stand out to the right audience
-        </h2>
-        <div class="sunnyside__audience-text">
-          Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-        </div>
-        <div class="sunnyside__learn sunnyside__audience-learn">
-          Learn more
+        <div class="sunnyside__brand-content">
+          <h2 class="sunnyside__subtitle">
+          Transform your brand
+          </h2>
+          <div class="sunnyside__brand-text">
+            We are a full-service creative agency specializing in helping brands grow fast. 
+            Engage your clients through compelling visuals that do most of the marketing for you.
+          </div>
+          <div class="sunnyside__learn sunnyside__brand-learn">
+            Learn more
+          </div>
         </div>
       </div>
-    </div>
-    <div class="sunnyside__design-photography">
-      <div class="sunnyside__graphic-design">
-        <h2 class="sunnyside__graphic-subtitle">
-          Graphic Design
-        </h2>
-        <div class="sunnyside__graphic-text">
-          Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+      <div class="sunnyside__main-audience">
+        <div class="sunnyside__audience-image">
+        </div>
+        <div class="sunnyside__audience-content">
+          <h2 class="sunnyside__audience-subtitle">
+            Stand out to the right audience
+          </h2>
+          <div class="sunnyside__audience-text">
+            Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+          </div>
+          <div class="sunnyside__learn sunnyside__audience-learn">
+            Learn more
+          </div>
         </div>
       </div>
-      <div class="sunnyside__photography">
-        <h2 class="sunnyside__photography-subtitle">
-          Photography
-        </h2>
-        <div class="sunnyside__photography-text">
-          Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+      <div class="sunnyside__design-photography">
+        <div class="sunnyside__graphic-design">
+          <h2 class="sunnyside__graphic-subtitle">
+            Graphic Design
+          </h2>
+          <div class="sunnyside__graphic-text">
+            Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+          </div>
+        </div>
+        <div class="sunnyside__photography">
+          <h2 class="sunnyside__photography-subtitle">
+            Photography
+          </h2>
+          <div class="sunnyside__photography-text">
+            Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section>
-    <h2 class="sunnyside__testimonials-title">
-      Client testimonials
-    </h2>
-    <div class="sunnyside__testimonials-container">
-      <div>
-        <img src="./images/image-emily.jpg" alt="Photo of Emily, a blonde woman looking to the infinity."
-        class="sunnyside__testimonials-image"/>
-        <div class="sunnyside__testimonials-text">
-          We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+    <section>
+      <h2 class="sunnyside__testimonials-title">
+        Client testimonials
+      </h2>
+      <div class="sunnyside__testimonials-container">
+        <div>
+          <img src="./images/image-emily.jpg" alt="Photo of Emily, a blonde woman looking to the infinity."
+          class="sunnyside__testimonials-image"/>
+          <div class="sunnyside__testimonials-text">
+            We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+          </div>
+          <div class="sunnyside__testimonials-name">
+            Emily R.
+          </div>
+          <div  class="sunnyside__testimonials-position">
+            Marketing Director
+          </div>
         </div>
-        <div class="sunnyside__testimonials-name">
-          Emily R.
+        <div>
+          <img src="./images/image-thomas.jpg" alt="Photo of Thomas, a black men looking to the camera with a big and nice smile."
+          class="sunnyside__testimonials-image"/>
+          <div class="sunnyside__testimonials-text">
+            Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+          </div>
+          <div class="sunnyside__testimonials-name">
+            Thomas S.
+          </div>
+          <div  class="sunnyside__testimonials-position">
+            Chief Operating Officer
+          </div>
         </div>
-        <div  class="sunnyside__testimonials-position">
-          Marketing Director
+        <div>
+          <img src="./images/image-jennie.jpg" alt="Photo of Jennie F, a with woman looking to the camera smiling and in the backwround the beach."
+          class="sunnyside__testimonials-image"/>
+          <div class="sunnyside__testimonials-text">
+            Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+          </div>
+          <div class="sunnyside__testimonials-name">
+            Jennie F.
+          </div>
+          <div  class="sunnyside__testimonials-position">
+            Business Owner
+          </div>
+        </div>
         </div>
       </div>
-      <div>
-        <img src="./images/image-thomas.jpg" alt="Photo of Thomas, a black men looking to the camera with a big and nice smile."
-        class="sunnyside__testimonials-image"/>
-        <div class="sunnyside__testimonials-text">
-          Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
+    </section>
+    <section>
+      <div class="sunnyside__gallery-images">
+        <div class="sunnyside__gallery-milkbottles">
         </div>
-        <div class="sunnyside__testimonials-name">
-          Thomas S.
+        <div class="sunnyside__gallery-orange">
         </div>
-        <div  class="sunnyside__testimonials-position">
-          Chief Operating Officer
+        <div class="sunnyside__gallery-cone">
         </div>
-      </div>
-      <div>
-        <img src="./images/image-jennie.jpg" alt="Photo of Jennie F, a with woman looking to the camera smiling and in the backwround the beach."
-        class="sunnyside__testimonials-image"/>
-        <div class="sunnyside__testimonials-text">
-          Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-        </div>
-        <div class="sunnyside__testimonials-name">
-          Jennie F.
-        </div>
-        <div  class="sunnyside__testimonials-position">
-          Business Owner
+        <div class="sunnyside__gallery-cubes">
         </div>
       </div>
-      </div>
-    </div>
-  </section>
-  <section>
-    <div class="sunnyside__gallery-images">
-      <div class="sunnyside__gallery-milkbottles">
-      </div>
-      <div class="sunnyside__gallery-orange">
-      </div>
-      <div class="sunnyside__gallery-cone">
-      </div>
-      <div class="sunnyside__gallery-cubes">
-      </div>
-    </div>
-  </section>
-  <section class="sunnyside__footer">
+    </section>
+  </main>
+  <footer class="sunnyside__footer">
     <h2 class="sunnyside__logo-footer">
       sunnyside
     </h2>
@@ -182,10 +184,10 @@
         <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg"><path d="M10 0C4.477 0 0 4.477 0 10c0 4.237 2.636 7.855 6.356 9.312-.088-.791-.167-2.005.035-2.868.181-.78 1.172-4.97 1.172-4.97s-.299-.6-.299-1.486c0-1.39.806-2.428 1.81-2.428.852 0 1.264.64 1.264 1.408 0 .858-.546 2.14-.828 3.33-.236.995.5 1.807 1.48 1.807 1.778 0 3.144-1.874 3.144-4.58 0-2.393-1.72-4.068-4.176-4.068-2.845 0-4.516 2.135-4.516 4.34 0 .859.331 1.781.745 2.281a.3.3 0 01.069.288l-.278 1.133c-.044.183-.145.223-.335.134-1.249-.581-2.03-2.407-2.03-3.874 0-3.154 2.292-6.052 6.608-6.052 3.469 0 6.165 2.473 6.165 5.776 0 3.447-2.173 6.22-5.19 6.22-1.013 0-1.965-.525-2.291-1.148l-.623 2.378c-.226.869-.835 1.958-1.244 2.621.937.29 1.931.446 2.962.446 5.523 0 10-4.477 10-10S15.523 0 10 0z" fill-rule="nonzero"/></svg>
       </li>
     </ul>
-  </section>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Manuel Gallego Arias</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Manuel Gallego Arias</a>.
+    </div>
+  </footer>
 </body>
 </html>
