Frontendmentor: sunnyside, cummunity feedback change div by ul in testimonials

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -105,8 +105,8 @@
       <h2 class="sunnyside__testimonials-title">
         Client testimonials
       </h2>
-      <div class="sunnyside__testimonials-container">
-        <div>
+      <ul class="sunnyside__testimonials-container">
+        <li>
           <img src="./images/image-emily.jpg" alt="Photo of Emily, a blonde woman looking to the infinity."
           class="sunnyside__testimonials-image"/>
           <div class="sunnyside__testimonials-text">
@@ -118,8 +118,8 @@
           <div  class="sunnyside__testimonials-position">
             Marketing Director
           </div>
-        </div>
-        <div>
+        </li>
+        <li>
           <img src="./images/image-thomas.jpg" alt="Photo of Thomas, a black men looking to the camera with a big and nice smile."
           class="sunnyside__testimonials-image"/>
           <div class="sunnyside__testimonials-text">
@@ -131,8 +131,8 @@
           <div  class="sunnyside__testimonials-position">
             Chief Operating Officer
           </div>
-        </div>
-        <div>
+        </li>
+        <li>
           <img src="./images/image-jennie.jpg" alt="Photo of Jennie F, a with woman looking to the camera smiling and in the backwround the beach."
           class="sunnyside__testimonials-image"/>
           <div class="sunnyside__testimonials-text">
@@ -144,9 +144,8 @@
           <div  class="sunnyside__testimonials-position">
             Business Owner
           </div>
-        </div>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <section>
       <div class="sunnyside__gallery-images">
