--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -51,8 +51,10 @@
   <main>
     <section>
       <div class="sunnyside__main-brand">
-        <div class="sunnyside__brand-image">
-        </div>
+        <picture>
+          <source srcset="../images/desktop/image-transform.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__brand-image" src="../images/mobile/image-transform.jpg" alt="Transform your brand image, a white egg with a yellow background." />
+        </picture>
         <div class="sunnyside__brand-content">
           <h2 class="sunnyside__subtitle">
           Transform your brand
@@ -67,8 +69,10 @@
         </div>
       </div>
       <div class="sunnyside__main-audience">
-        <div class="sunnyside__audience-image">
-        </div>
+        <picture>
+          <source srcset="../images/desktop/image-stand-out.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__audience-image" src="../images/mobile/image-stand-out.jpg" alt="Audience image is a pink cup with white lights from the left and a pink background." />
+        </picture>
         <div class="sunnyside__audience-content">
           <h2 class="sunnyside__audience-subtitle">
             Stand out to the right audience
@@ -147,17 +151,23 @@
         </li>
       </ul>
     </section>
-    <section>
-      <div class="sunnyside__gallery-images">
-        <div class="sunnyside__gallery-milkbottles">
-        </div>
-        <div class="sunnyside__gallery-orange">
-        </div>
-        <div class="sunnyside__gallery-cone">
-        </div>
-        <div class="sunnyside__gallery-cubes">
-        </div>
-      </div>
+    <section class="sunnyside__gallery-images">
+        <picture class="sunnyside__gallery-picture">
+          <source srcset="../images/desktop/image-gallery-milkbottles.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-milkbottles" src="../images/mobile/image-gallery-milkbottles.jpg" alt="This is a gallery image of a milk bottles with red bottle top with an blue ski background." />
+        </picture>
+        <picture class="sunnyside__gallery-picture">
+          <source srcset="../images/desktop/image-gallery-orange.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-orange" src="../images/mobile/image-gallery-orange.jpg" alt="This is a gallery image of an orange in a white plate with a green border, the background is orange." />
+        </picture>
+        <picture class="sunnyside__gallery-picture">
+          <source srcset="../images/desktop/image-gallery-cone.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-cone" src="../images/mobile/image-gallery-cone.jpg" alt="This is a gallery image of a cone without ice with an blue background." />
+        </picture>
+        <picture class="sunnyside__gallery-picture">
+          <source srcset="../images/desktop/image-gallery-sugarcubes.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-cubes" src="../images/mobile/image-gallery-sugar-cubes.jpg" alt="This is a gallery image of a with white cubes and a pink background." />
+        </picture>
     </section>
   </main>
   <footer class="sunnyside__footer">
