Frontendmentor: sunnyside, cummunity feedback html error

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -33,7 +33,7 @@
         onclick="showHiddeMenu()"
         />
       <svg id="mobile-triangle" class="sunnyside__nav-triangle">
-        <polygon points="250,17 250,249 160,110"/>Sorry, your browser does not support inline SVG.
+        <polygon points="250,17 250,249 160,110"/>
       </svg>
       <ul class="sunnyside__nav-links" id="mobile-menu">
         <li class="sunnyside__nav sunnyside__nav-link sunnyside__link-about"><a class="sunnyside__nav-link-text" href="https://mgallegoa.github.io/">About</a></li>
