--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -52,8 +52,8 @@
     <section>
       <div class="sunnyside__main-brand">
         <picture>
-          <source srcset="../images/desktop/image-transform.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__brand-image" src="../images/mobile/image-transform.jpg" alt="Transform your brand image, a white egg with a yellow background." />
+          <source srcset="./images/desktop/image-transform.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__brand-image" src="./images/mobile/image-transform.jpg" alt="Transform your brand image, a white egg with a yellow background." />
         </picture>
         <div class="sunnyside__brand-content">
           <h2 class="sunnyside__subtitle">
@@ -70,8 +70,8 @@
       </div>
       <div class="sunnyside__main-audience">
         <picture>
-          <source srcset="../images/desktop/image-stand-out.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__audience-image" src="../images/mobile/image-stand-out.jpg" alt="Audience image is a pink cup with white lights from the left and a pink background." />
+          <source srcset="./images/desktop/image-stand-out.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__audience-image" src="./images/mobile/image-stand-out.jpg" alt="Audience image is a pink cup with white lights from the left and a pink background." />
         </picture>
         <div class="sunnyside__audience-content">
           <h2 class="sunnyside__audience-subtitle">
@@ -153,20 +153,20 @@
     </section>
     <section class="sunnyside__gallery-images">
         <picture class="sunnyside__gallery-picture">
-          <source srcset="../images/desktop/image-gallery-milkbottles.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__gallery-milkbottles" src="../images/mobile/image-gallery-milkbottles.jpg" alt="This is a gallery image of a milk bottles with red bottle top with an blue ski background." />
+          <source srcset="./images/desktop/image-gallery-milkbottles.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-milkbottles" src="./images/mobile/image-gallery-milkbottles.jpg" alt="This is a gallery image of a milk bottles with red bottle top with an blue ski background." />
         </picture>
         <picture class="sunnyside__gallery-picture">
-          <source srcset="../images/desktop/image-gallery-orange.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__gallery-orange" src="../images/mobile/image-gallery-orange.jpg" alt="This is a gallery image of an orange in a white plate with a green border, the background is orange." />
+          <source srcset="./images/desktop/image-gallery-orange.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-orange" src="./images/mobile/image-gallery-orange.jpg" alt="This is a gallery image of an orange in a white plate with a green border, the background is orange." />
         </picture>
         <picture class="sunnyside__gallery-picture">
-          <source srcset="../images/desktop/image-gallery-cone.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__gallery-cone" src="../images/mobile/image-gallery-cone.jpg" alt="This is a gallery image of a cone without ice with an blue background." />
+          <source srcset="./images/desktop/image-gallery-cone.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-cone" src="./images/mobile/image-gallery-cone.jpg" alt="This is a gallery image of a cone without ice with an blue background." />
         </picture>
         <picture class="sunnyside__gallery-picture">
-          <source srcset="../images/desktop/image-gallery-sugarcubes.jpg" media="(min-width: 768px)"/>
-          <img class="sunnyside__gallery-cubes" src="../images/mobile/image-gallery-sugar-cubes.jpg" alt="This is a gallery image of a with white cubes and a pink background." />
+          <source srcset="./images/desktop/image-gallery-sugarcubes.jpg" media="(min-width: 768px)"/>
+          <img class="sunnyside__gallery-cubes" src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="This is a gallery image of a with white cubes and a pink background." />
         </picture>
     </section>
   </main>
