Frontendmentor: sunnyside, cummunity feedback Frontendmentor

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -152,6 +152,9 @@
       </ul>
     </section>
     <section class="sunnyside__gallery-images">
+        <h2 class="sunnyside__gallery-title">
+          Gallery images
+        </h2>
         <picture class="sunnyside__gallery-picture">
           <source srcset="./images/desktop/image-gallery-milkbottles.jpg" media="(min-width: 768px)"/>
           <img class="sunnyside__gallery-milkbottles" src="./images/mobile/image-gallery-milkbottles.jpg" alt="This is a gallery image of a milk bottles with red bottle top with an blue ski background." />
