FrontMentor: Blog Card - Solution for the challenge.

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -1,34 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Blog preview card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://mgallegoa.github.io/img/Manuel.ico"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Blog preview card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
 
-  Learning
+    <link rel="stylesheet" type="text/css" href="css/blog-card.css" />
+  </head>
 
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <body class="body">
+    <section>
+      <article class="card">
+        <header class="card__header">
+          <img
+            class="card__image"
+            src="assets/images/illustration-article.svg"
+            alt="Image of a draw with tree ovals one over others, the first wiht, the middle oval black and the so far is wiht, the first oval have tree symbols, one slash in the middle between grader than and less than symbols. The image at the button have blanks images and one curve line from top to buttom."
+          />
+        </header>
+        <main>
+          <button type="button" class="card__button">Learning</button>
+          <div class="card_date">Plublished 21 Dec 2023</div>
+          <h2>HTML & CSS foundations</h2>
+          <p class="card_text">
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+        </main>
+        <footer class="card__footer">
+          <img
+            class="card__fotter-avatar"
+            src="assets/images/image-avatar.webp"
+            alt="Potho of Greg Hooper "
+          />
+          Greg Hooper
+        </footer>
+      </article>
+    </section>
+  </body>
 </html>
