Front Mentor: Blog Card - Pixel perfecti desktop

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -28,15 +28,14 @@
       <article class="card">
         <header class="card__header">
           <img
-            class="card__image"
             src="assets/images/illustration-article.svg"
             alt="Image of a draw with tree ovals one over others, the first wiht, the middle oval black and the so far is wiht, the first oval have tree symbols, one slash in the middle between grader than and less than symbols. The image at the button have blanks images and one curve line from top to buttom."
           />
         </header>
         <main>
           <button type="button" class="card__button">Learning</button>
-          <div class="card_date">Plublished 21 Dec 2023</div>
-          <h2>HTML & CSS foundations</h2>
+          <div class="card_date">Published 21 Dec 2023</div>
+          <h1 class="card__title">HTML & CSS foundations</h1>
           <p class="card_text">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
