Front Mentor: Blog Card - Pixel perfecti

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="https://mgallegoa.github.io/img/Manuel.ico"
+      href="https://mgallegoa.github.io/img/Manuel_32x32.ico"
     />
 
     <title>Frontend Mentor | Blog preview card</title>
@@ -28,6 +28,7 @@
       <article class="card">
         <header class="card__header">
           <img
+            class="card__image"
             src="assets/images/illustration-article.svg"
             alt="Image of a draw with tree ovals one over others, the first wiht, the middle oval black and the so far is wiht, the first oval have tree symbols, one slash in the middle between grader than and less than symbols. The image at the button have blanks images and one curve line from top to buttom."
           />
