Front Mentor: Blog Card - Pixel perfect

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -33,7 +33,7 @@
             alt="Image of a draw with tree ovals one over others, the first wiht, the middle oval black and the so far is wiht, the first oval have tree symbols, one slash in the middle between grader than and less than symbols. The image at the button have blanks images and one curve line from top to buttom."
           />
         </header>
-        <main>
+        <main class="card_main">
           <button type="button" class="card__button">Learning</button>
           <div class="card_date">Published 21 Dec 2023</div>
           <h1 class="card__title">HTML & CSS foundations</h1>
