--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -35,9 +35,9 @@
         </header>
         <main class="card__main">
           <button type="button" class="card__button">Learning</button>
-          <div class="card_date">Published 21 Dec 2023</div>
+          <div class="card__date">Published 21 Dec 2023</div>
           <h1 class="card__title">HTML & CSS foundations</h1>
-          <p class="card_text">
+          <p class="card__text">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
           </p>
