Front Mentor: Blog Card - Fix Accessibility error

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -48,7 +48,7 @@
             src="assets/images/image-avatar.webp"
             alt="Potho of Greg Hooper "
           />
-          Greg Hooper
+          <h4 class="card__avatar-name">Greg Hooper</h4>
         </footer>
       </article>
     </section>
