Front Mentor: Blog Card - Fix html errors

--- a/fem/blog-preview-card-main/index.html
+++ b/fem/blog-preview-card-main/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body class="body">
-    <section>
+    <main>
       <article class="card">
         <header class="card__header">
           <img
@@ -33,7 +33,7 @@
             alt="Image of a draw with tree ovals one over others, the first wiht, the middle oval black and the so far is wiht, the first oval have tree symbols, one slash in the middle between grader than and less than symbols. The image at the button have blanks images and one curve line from top to buttom."
           />
         </header>
-        <main class="card__main">
+        <div class="card__main">
           <button type="button" class="card__button">Learning</button>
           <div class="card__date">Published 21 Dec 2023</div>
           <h1 class="card__title">HTML & CSS foundations</h1>
@@ -41,16 +41,16 @@
             These languages are the backbone of every website, defining
             structure, content, and presentation.
           </p>
-        </main>
-        <footer class="card__footer">
+        </div>
+        <div class="card__footer">
           <img
             class="card__fotter-avatar"
             src="assets/images/image-avatar.webp"
             alt="Potho of Greg Hooper "
           />
           <h4 class="card__avatar-name">Greg Hooper</h4>
-        </footer>
+        </div>
       </article>
-    </section>
+    </main>
   </body>
 </html>
