Front Mentor: Sign Up. Fix URL rutes

--- a/fem/5_N_intro-component-with-signup-form-master/index.html
+++ b/fem/5_N_intro-component-with-signup-form-master/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body class="body">
     <header class="header">
@@ -40,7 +40,7 @@
         />
         <span data-icon="firstName" class="error-icon form__name--error-icon">
           <img
-            src="/images/icon-error.svg"
+            src="images/icon-error.svg"
             alt="Error Icon, a red circle with a blank exclamation mark in the middle"
           />
         </span>
@@ -63,7 +63,7 @@
           class="error-icon form__last-name--error-icon"
         >
           <img
-            src="/images/icon-error.svg"
+            src="images/icon-error.svg"
             alt="Error Icon, a red circle with a blank exclamation mark in the middle"
           />
         </span>
@@ -83,7 +83,7 @@
         />
         <span data-icon="email" class="error-icon form__email--error-icon"
           ><img
-            src="/images/icon-error.svg"
+            src="images/icon-error.svg"
             alt="Error Icon, a red circle with a blank exclamation mark in the middle"
           />
         </span>
@@ -109,7 +109,7 @@
         />
         <span data-icon="password" class="error-icon form__password--error-icon"
           ><img
-            src="/images/icon-error.svg"
+            src="images/icon-error.svg"
             alt="Error Icon, a red circle with a blank exclamation mark in the middle"
           />
         </span>
@@ -129,6 +129,6 @@
       </form>
     </main>
 
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
