--- a/fem/5_N_intro-component-with-signup-form-master/index.html
+++ b/fem/5_N_intro-component-with-signup-form-master/index.html
@@ -34,9 +34,9 @@
           class="form__input"
           type="text"
           name="firstName"
+          id="firstName"
           value=""
           placeholder="First Name"
-          onfocusout="validateFirstName()"
         />
         <div
           data-message="firstName"
@@ -54,9 +54,9 @@
           class="form__input"
           type="text"
           name="lastName"
+          id="lastName"
           value=""
           placeholder="Last Name"
-          onfocusout="validateLastName()"
         />
         <div
           data-message="lastName"
@@ -77,9 +77,9 @@
           class="form__input"
           type="text"
           name="email"
+          id="email"
           value=""
           placeholder="Email Address"
-          onfocusout="validateEmail()"
         />
         <div
           data-message="emailRegex"
@@ -97,9 +97,9 @@
           class="form__input"
           type="password"
           name="password"
+          id="password"
           value=""
           placeholder="Password"
-          onfocusout="validatePassword()"
         />
         <div
           data-message="password"
