Add notes to take into count in develp

--- a/notes.html
+++ b/notes.html
@@ -1,4 +1,4 @@
-<<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <a href="fem/">Front Mentor</a>
     <ul>
       <li>Linux:</li>
       <ol>
@@ -23,7 +24,7 @@
       <li>Develop:</li>
       <ol>
         <li>
-          Indentation: Tabs for identation, spaces for alignment
+          Indentation: Tabs for indentation, spaces for alignment
           https://lea.verou.me/blog/2012/01/why-tabs-are-clearly-superior/
         </li>
         <li>Fonts to develop : DroidSansM Nerd Font</li>
@@ -32,7 +33,9 @@
           question your self "do i rely need to set height" if yes -> use a
           min-height padding/margin: rem or em, kevin often uses em for padding
           of buttons media queries: em. px only for little things like shadows,
-          borders etc.
+          borders etc.<br />
+          .woff2 fonts<br />
+          https://gwfh.mranftl.com/fonts/finlandica?subsets=latin
         </li>
       </ol>
     </ul>
