Personal Documentation, CSS add documentation

--- a/fem/index.html
+++ b/fem/index.html
@@ -61,6 +61,10 @@
           </li>
         </ol>
       </section>
+      <section class="fem__other-documentation">
+        <a href="css-ways.html">7 ways to work with css</a>
+        <a href="sass.html">SASS</a>
+      </section>
       <section class="fem__notes">
         <ol class="fem__notes-list">
           <li>
@@ -179,6 +183,19 @@
             aria-invalid="true" when it has an error state. The
             span.text-fem-red may have an aria-live="assertive" attribute so the
             assistive technologies may read out loud any error message.
+          </li>
+          <li>
+            All interactive elements, like anchors or buttons should provide
+            different states to be universally accessible; those states should
+            at least be rest (default state), hover, focus and active. Check for
+            the requirements in the provided screenshots and try to not let the
+            browser use the focus one to provide a unique experience across
+            devices.
+          </li>
+          <li>
+            <a href="https://dequeuniversity.com/checklists/web/">
+              deque university check list
+            </a>
           </li>
         </ol>
       </section>
