Personal Documentation, CSS history documentation

--- a/fem/index.html
+++ b/fem/index.html
@@ -199,6 +199,118 @@
           </li>
         </ol>
       </section>
+      <section style="margin-top: 3rem">
+        <h2>CSS Versions Features</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>CSS Version</th>
+              <th>Year</th>
+              <th>Feature</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>CSS1</td>
+              <td>1996</td>
+              <td>Selectors</td>
+              <td>Basic selectors for elements, classes, and IDs.</td>
+            </tr>
+            <tr>
+              <td>CSS1</td>
+              <td>1996</td>
+              <td>Text Properties</td>
+              <td>Font settings, text color, decoration, and alignment.</td>
+            </tr>
+            <tr>
+              <td>CSS1</td>
+              <td>1996</td>
+              <td>Box Model</td>
+              <td>
+                Definition of margins, borders, padding, and content area.
+              </td>
+            </tr>
+            <tr>
+              <td>CSS1</td>
+              <td>1996</td>
+              <td>Backgrounds</td>
+              <td>Background color and image properties.</td>
+            </tr>
+            <tr>
+              <td>CSS1</td>
+              <td>1996</td>
+              <td>Lists</td>
+              <td>Basic styling for ordered and unordered lists.</td>
+            </tr>
+            <tr>
+              <td>CSS2</td>
+              <td>1998</td>
+              <td>Advanced Selectors</td>
+              <td>Attribute selectors, pseudo-classes, and pseudo-elements.</td>
+            </tr>
+            <tr>
+              <td>CSS2</td>
+              <td>1998</td>
+              <td>Box Model Enhancements</td>
+              <td>Detailed box model with margin collapsing behavior.</td>
+            </tr>
+            <tr>
+              <td>CSS2</td>
+              <td>1998</td>
+              <td>Positioning</td>
+              <td>Absolute, fixed, and relative positioning methods.</td>
+            </tr>
+            <tr>
+              <td>CSS2</td>
+              <td>1998</td>
+              <td>Media Types</td>
+              <td>Support for media types and media queries.</td>
+            </tr>
+            <tr>
+              <td>CSS2</td>
+              <td>1998</td>
+              <td>Table Styling</td>
+              <td>Enhanced control over table layout and styling.</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>1999 (partial)</td>
+              <td>Modularization</td>
+              <td>
+                Separation of CSS features into modules for easier updates.
+              </td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>2011</td>
+              <td>Flexbox</td>
+              <td>A flexible box layout model for responsive design.</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>2011</td>
+              <td>Grid Layout</td>
+              <td>A two-dimensional grid layout system for complex designs.</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>2011</td>
+              <td>Transitions and Animations</td>
+              <td>Support for smooth transitions and keyframe animations.</td>
+            </tr>
+            <tr>
+              <td>CSS3</td>
+              <td>2011</td>
+              <td>Media Queries</td>
+              <td>
+                Enhanced support for responsive design based on device
+                characteristics.
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
   </body>
 </html>
